# test_rust_dll

./: .gitignore  CMakeLists.txt  README.MD  cmake-variants.yaml
cpp_demo/: CMakeLists.txt  main.cpp  rust_api.h
simple_ffi/: CMakeLists.txt  Cargo.toml  cbindgen.toml
simple_ffi/src/: lib.rs
